test/features/errors/semantic/e1022_invalid_lhs_assignment.spl
# E1022: Invalid LHS Assignment

Feature: E1022 - Invalid Left-Hand Side of Assignment
  As a Simple compiler
  I want to detect invalid assignment targets
  So that only valid l-values can be assigned to

  Background:
    Given I have the Simple compiler

  Scenario: Assigning to literal
    When I compile:
      '''
      fn test():
        42 = 10  # Error: cannot assign to literal
      '''
    Then I should see error E1022 at line 2
    And the error message should be "invalid left-hand side of assignment"
    And the label should indicate "cannot assign to this expression"
    And the help should suggest "only variables, fields, and array elements can be assigned to"

  Scenario: Assigning to function call result
    When I compile:
      '''
      fn get_value() -> i32:
        42

      fn test():
        get_value() = 10  # Error: cannot assign to function result
      '''
    Then I should see error E1022 at line 5

  Scenario: Assigning to binary expression
    When I compile:
      '''
      fn test():
        var x = 5
        x + 1 = 10  # Error: cannot assign to expression
      '''
    Then I should see error E1022 at line 3

  Scenario: Assigning to immutable variable
    When I compile:
      '''
      fn test():
        val x = 5
        x = 10  # This might be E1011 (Cannot Assign to Constant)
      '''
    Then I should see error E1011 or E1022

  Scenario: Valid variable assignment
    When I compile:
      '''
      fn test():
        var x = 5
        x = 10  # OK: mutable variable
      '''
    Then compilation should succeed

  Scenario: Valid field assignment
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn test():
        var p = Point { x: 0, y: 0 }
        p.x = 10  # OK: field assignment
      '''
    Then compilation should succeed

  Scenario: Valid array element assignment
    When I compile:
      '''
      fn test():
        var arr = [1, 2, 3]
        arr[0] = 42  # OK: array element assignment
      '''
    Then compilation should succeed

  Scenario: Valid tuple field assignment (if supported)
    When I compile:
      '''
      fn test():
        var tuple = (1, 2, 3)
        tuple.0 = 42  # OK if mutable tuple fields supported
      '''
    Then compilation should succeed or show appropriate error

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        42 = 10
      '''
    Then I should see error E1022
    And the error message should contain "잘못된 할당 좌변"
